apps/example-python-app-3/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-python-app-3
  namespace: dev
  labels:
    app: example-python-app-3
    backstage.io/kubernetes-id: example-python-app-3
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-python-app-3
  template:
    metadata:
      labels:
        app: example-python-app-3
        backstage.io/kubernetes-id: example-python-app-3
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: example-python-app-3
          image: jaykumark7/example-python-app-3:1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
