apps/example-python-app-3/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-python-app-3
  namespace: dev
  labels:
    backstage.io/kubernetes-id: example-python-app-3
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /example-python-app-3-dev(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-python-app-3
                port:
                  number: 80
